; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/net/irda/extr_parameters.c_irda_insert_no_value.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/net/irda/extr_parameters.c_irda_insert_no_value.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_5__ = type { i64, i32 }

@PV_GET = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [3 x i8] c"bb\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i8*, i32*, i32, i32, i32, i32 (i8*, %struct.TYPE_5__*, i32)*)* @irda_insert_no_value to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @irda_insert_no_value(i8* %0, i32* %1, i32 %2, i32 %3, i32 %4, i32 (i8*, %struct.TYPE_5__*, i32)* %5) #0 {
  %7 = alloca i32, align 4
  %8 = alloca i8*, align 8
  %9 = alloca i32*, align 8
  %10 = alloca i32, align 4
  %11 = alloca i32, align 4
  %12 = alloca i32, align 4
  %13 = alloca i32 (i8*, %struct.TYPE_5__*, i32)*, align 8
  %14 = alloca %struct.TYPE_5__, align 8
  %15 = alloca i32, align 4
  store i8* %0, i8** %8, align 8
  store i32* %1, i32** %9, align 8
  store i32 %2, i32* %10, align 4
  store i32 %3, i32* %11, align 4
  store i32 %4, i32* %12, align 4
  store i32 (i8*, %struct.TYPE_5__*, i32)* %5, i32 (i8*, %struct.TYPE_5__*, i32)** %13, align 8
  %16 = load i32, i32* %11, align 4
  %17 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %14, i32 0, i32 1
  store i32 %16, i32* %17, align 8
  %18 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %14, i32 0, i32 0
  store i64 0, i64* %18, align 8
  %19 = load i32 (i8*, %struct.TYPE_5__*, i32)*, i32 (i8*, %struct.TYPE_5__*, i32)** %13, align 8
  %20 = load i8*, i8** %8, align 8
  %21 = load i32, i32* @PV_GET, align 4
  %22 = call i32 %19(i8* %20, %struct.TYPE_5__* %14, i32 %21)
  store i32 %22, i32* %15, align 4
  %23 = load i32*, i32** %9, align 8
  %24 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %14, i32 0, i32 1
  %25 = load i32, i32* %24, align 8
  %26 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %14, i32 0, i32 0
  %27 = load i64, i64* %26, align 8
  %28 = call i32 @irda_param_pack(i32* %23, i8* getelementptr inbounds ([3 x i8], [3 x i8]* @.str, i64 0, i64 0), i32 %25, i64 %27)
  %29 = load i32, i32* %15, align 4
  %30 = icmp slt i32 %29, 0
  br i1 %30, label %31, label %33

31:                                               ; preds = %6
  %32 = load i32, i32* %15, align 4
  store i32 %32, i32* %7, align 4
  br label %34

33:                                               ; preds = %6
  store i32 2, i32* %7, align 4
  br label %34

34:                                               ; preds = %33, %31
  %35 = load i32, i32* %7, align 4
  ret i32 %35
}

declare dso_local i32 @irda_param_pack(i32*, i8*, i32, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
